test/parser/fuzz.2.err
INVALID_TOKEN[1000] in test/parser/fuzz.2.pytch, line 1, character 18:
Error: Invalid token '!'.
   +----------------------------------------------+
   | test/parser/fuzz.2.pytch                     |
 1 | let foo = print(1!                           |
   |                  ^ Error: Invalid token '!'. |
   +----------------------------------------------+
EXPECTED_END_OF_ARGUMENT_LIST[1018] in test/parser/fuzz.2.pytch, line 1, character 18:
Error: I was expecting a ',' or ')' after the previous argument.
   +------------------------------------------------------------------+
   | test/parser/fuzz.2.pytch                                         |
 1 | let foo = print(1!                                               |
   |                  ^ Error: I was expecting a ',' or ')' after the |
   | previous argument.                                               |
   +------------------------------------------------------------------+
